CAY-2354 DbGenerator.runGenerator must commit its connection
CAY-2356 EJBQL: Incorrect COUNT() on outer joined table
CAY-2357 Generic select queries silently convert result to nulls if no PK column found
CAY-2358 NPE when callbacks invoked on null objects
CAY-2359 EJBQL: db path in not supported in ORDER BY
CAY-2362 ColumnSelect: unable to use Property without type

----------------------------------
Release: 4.0.B1
Date:
----------------------------------
Changes/New Features:

CAY-1873 Move DataDomain cache configuration from the Modeler and into DI
CAY-1891 Modeler: Add To-Many Warning
CAY-1892 Modeler: Add Relationship Data Type Warning
CAY-2057 Modeler: Clean up OS X version
CAY-2109 cayenne-crypto: add value authentication (HMAC) 
CAY-2210 Query cache: incorrect cache key for queries with custom value objects
CAY-2255 ObjectSelect improvement: columns as full entities
CAY-2258 DI: type-safe binding of List and Map
CAY-2259 QueryCache: support for referencing type-safe caches
CAY-2261 Replace NamedQuery with MappedXYZ in *datamap.vm
CAY-2262 Module auto-loading
CAY-2266 Move EventBridge implementations into autoloadable modules
CAY-2267 Contribute lifecycle events listeners via DI
CAY-2268 DI: Refactor ListBuilder API ambiguities for before() / after() bindings
CAY-2269 Add support for date/time components extraction in expression functions
CAY-2270 Update function support in expression parser
CAY-2271 ColumnSelect: support for prefetch and limit
CAY-2272 ColumnSelect: methods to manually control DISTINCT clause
CAY-2274 Modeler: Validate case when dependent PK is marked as “generated”
CAY-2277 Create ClientRuntime with ClientRuntimeBuilder just like ServerRuntime
CAY-2278 Extract cayenne-postcommit module from cayenne-lifecycle
CAY-2280 Switch from commons-logging to slf4j
CAY-2295 "Sync ObjEntity with DbEntity" and "View related DbEntity" buttons aren't disabled, if DbEntity doesn't have ObjEntity